# TecnoFix-Frontend

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: auto-updater.md
docs/PR/: pr-fix-installer-images-v0.2.4.md  pr-fix-nsis-config-v0.2.3.md  pr-fix-perfil-password-v0.2.1.md  pr-fix-react-query-refetch.md  pr-installer-branding-v0.2.2.md  pr-perfil-cambiar-password-v0.2.0.md  pr-refactor-arquitectura-v0.1.25.md
docs/all/: arquitectura-capas.md  auditoria.md  login-y-auth.md  perfil-cambiar-password.md  tipografia-y-estilos.md
docs/changelogs/: v0.1.18.md  v0.1.19.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.25.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: auditoria.ts  auth.ts  clientes.ts  inventario.ts  ordenes.ts  users.ts
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/shared/: ConfirmDialog.tsx  DataTable.tsx  (+5 more)
src/hooks/: useAuth.ts  usePagination.ts
src/lib/: axios.ts  config.ts  helpers.ts  queryClient.ts  schemas.ts
src/router/: ProtectedRoute.tsx  index.tsx
src/store/: authStore.ts  uiStore.ts
src/tauri/: UpdaterDialog.tsx  updater.ts
src/types/: auditoria.ts  auth.ts  cliente.ts  common.ts  index.ts  inventario.ts  orden.ts  user.ts
(+24 files in other folders)
