[package]
name = "tecnofix"
version = "0.1.0"
description = "TecnoFix - Sistema de gestión para taller de reparación"
authors = []
license = ""
repository = ""
default-run = "tecnofix"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tecnofix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tecnofix"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
